Fix sidebar block gap missing after core columns change

--- a/src/blocks/sidebar/style.css
+++ b/src/blocks/sidebar/style.css
@@ -25,6 +25,7 @@
 
 	.wp-block-hrswp-sidebar {
 		flex-wrap: nowrap;
+		gap: 2rem;
 	}
 
 	/* Have to use !important to override Core columns inline styles. */
